--- a/web/verification_email.html
+++ b/web/verification_email.html
@@ -1,5 +1,5 @@
-<h1>Thank you for signing up!</h1>
+<h1>Спасибо что присоединились к Quizly!</h1>
 <br>
 <p>
-    To be able to create question packages, <a href="{{.VerificationLink}}">you need to verify your account</a>.
+    Чтобы появилась возможность создавать пакеты с вопросами, <a href="{{.VerificationLink}}">необходимо подтвердить адрес электронной почты</a>.
 </p>
