--- a/web/account_verification.html
+++ b/web/account_verification.html
@@ -1,4 +1,4 @@
-<h1>Спасибо что присоединились к Quizly!</h1>
+<h1>Спасибо что присоединились к AnswerSuck!</h1>
 <br>
 <p>
     Чтобы появилась возможность создавать пакеты с вопросами, <a href="{{.VerificationURL}}">необходимо подтвердить адрес электронной почты</a>.
