--- a/web/account_verification.html
+++ b/web/account_verification.html
@@ -1,3 +1,3 @@
 <p>
-    Чтобы появилась возможность создавать пакеты с вопросами, <a href="{{.VerificationURL}}">необходимо подтвердить адрес электронной почты</a>.
+    Чтобы появилась возможность создавать пакеты с вопросами, <a href="{{.URL}}">необходимо подтвердить адрес электронной почты</a>.
 </p>
